--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ justify-items: center;
  font-size: 15px;
  font-weight: 700;
  line-height: 20px;
- font-color: rgb(118, 118, 119);
+ color: rgb(118, 118, 119);
 }
 
 .box-a a{
@@ -827,7 +827,7 @@ div::-webkit-scrollbar {
     /* transition: all 0.3s ease; */
     height: 50px;
     width: 200px;
-    margin-top: 50px;
+    margin-top: 20px;
   }
   
 
@@ -1170,9 +1170,9 @@ div::-webkit-scrollbar {
     line-height: 40px;
     color: rgb(0, 0, 0);
     border-bottom: 1px solid black;
-    width: 180%;
+    width: 150%;
     margin-top: 20px;
-    margin-left: 3px;
+    margin-left: 20px;
   }
 
   .text h2 :hover {
@@ -1187,9 +1187,9 @@ div::-webkit-scrollbar {
     line-height: 40px;
     color: rgb(0, 0, 0);
     border-bottom: 1px solid black;
-    width: 180%;
+    width: 150%;
     margin-top: 20px;
-    margin-left: 3px;
+    margin-left: 20px;
   }
   .text-2 h3 {
     font-size: 40px;
@@ -1197,9 +1197,9 @@ div::-webkit-scrollbar {
     line-height: 40px;
     color: rgb(0, 0, 0);
     border-bottom: 1px solid black;
-    width: 180%;
+    width: 150%;
     margin-top: 20px;
-    margin-left: 3px;
+    margin-left: 20px;
   }
   .text-3 h4{
     font-size: 40px;
@@ -1207,7 +1207,7 @@ div::-webkit-scrollbar {
     line-height: 40px;
     color: rgb(0, 0, 0);
     border-bottom: 1px solid black;
-    width: 380%;
+    width: 260%;
     margin-top: 210px;
     margin-left: -370px;
   }
@@ -1219,7 +1219,7 @@ div::-webkit-scrollbar {
     color: rgb(0, 0, 0);
     margin-left: -600px;
     border-bottom: 1px solid black;
-    width: 380%;
+    width: 260%;
     margin-left: -370px;
     margin-top: 20px;
   }
@@ -1231,7 +1231,7 @@ div::-webkit-scrollbar {
     color: rgb(0, 0, 0);
     margin-left: 80px;
     border-bottom: 1px solid black;
-    width: 380%;
+    width: 260%;
     margin-left: -370px;
     margin-top: 20px;
   }
@@ -1241,7 +1241,7 @@ div::-webkit-scrollbar {
     font-weight: 700;
     line-height: 36px;
     color: rgb(0, 0, 0);
-    margin-left: -80px;
+    margin-left: -60px;
     margin-top: -60px;
   }
 
@@ -1292,11 +1292,126 @@ div::-webkit-scrollbar {
     margin-left: -580px;
   }
 
+  .comic-button i {
+   margin-top: 0px;
+  }
+
+
   .text-12 {
     margin-left: 50px;
   }
 
-  .box-p {
+  /* .box-p {
     display: none;
+  } */
+  .text-15{
+    margin-top: -7px;
   }
+
+  .text-15 h1 {
+     font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    margin-left: 10px;
+  }
+
+  .text-15 a {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  
+  .text-16{
+    margin-top: -7px;
+    margin-left: 25px;
+  }
+  .text-16 h1 {
+    font-size: 16px;
+   font-weight: 700;
+   line-height: 24px;
+   margin-left: 10px;
+ }
+
+ .text-16 a {
+   font-size: 14px;
+   font-weight: 400;
+   line-height: 24px;
+ }
+ 
+ .text-17 {
+  margin-top: -7px;
+  margin-left: 25px;
+}
+
+ .text-17 h1 {
+  font-size: 16px;
+ font-weight: 700;
+ line-height: 24px;
+ margin-left: px;
+}
+
+.text-17 a {
+ font-size: 14px;
+ font-weight: 400;
+ line-height: 24px;
+}
+
+.text-18 {
+  margin-top: -7px;
+  margin-left: 25px;
+}
+
+.text-18 h1 {
+  font-size: 16px;
+ font-weight: 700;
+ line-height: 24px;
+ margin-left: 10px;
+}
+
+.text-18 a {
+ font-size: 14px;
+ font-weight: 400;
+ line-height: 24px;
+}
+
+.text-19 {
+  margin-top: -7px;
+  
+}
+
+.text-19 h1 {
+  font-size: 16px;
+ font-weight: 700;
+ line-height: 24px;
+ margin-left: 10px;
+}
+
+.text-19 a {
+ font-size: 14px;
+ font-weight: 400;
+ line-height: 24px;
+}
+
+.text-20 {
+  margin-top: -7px;
+}
+
+.text-20 h1 {
+  font-size: 16px;
+ font-weight: 700;
+ line-height: 24px;
+ margin-left: 10px;
+}
+
+.text-20 a {
+ font-size: 14px;
+ font-weight: 400;
+ line-height: 24px;
+}
+
+.text-20 i {
+  font-size: 20px;
+  margin-top: 20px;
+  margin-left: 10px;
+}
 }
